[project]
name = "script-doctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Osama Ata", email = "me@osamata.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1.2",
    "streamlit>=1.45.0",
]

# If you use `uv pip install -e .[dev]`, then keep these optional-dependencies.
optional-dependencies = { dev = ["watchdog", "ruff"] }

scripts = { start = "streamlit run src/script_doctor/app.py" } # Replace app.py if needed


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This is the new section to define runnable scripts with uv
#[tool.uv.scripts]
#start = "streamlit run src/script_doctor/app.py"